tests/invalid/Public_Invalid_5.whiley
type Hidden is (int x) where x >= 5

public function f({Hidden field} x) -> (int r):
    return 0

